--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Li Wei"
+  pronouns         : "He"  
+  bio              : "A junior engineer with a keen interest in artificial intelligence."
+  location         : "China,Beijing"
+  employer         : "Beihang University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "573904359@qq.com" 
 
   # Academic websites
   academia         : # URL
