--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "A junior engineer with a keen interest in artificial intelligence."
   location         : "China,Beijing"
   employer         : "Beihang University"
-  uri              : # URL
+  uri              : https://gouwei222.github.io/liwei222.github.io/
   email            : "573904359@qq.com" 
 
   # Academic websites
