--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "liw2.png"
   name             : "Li Wei"
   pronouns         : #"He"  
   bio              : "A junior engineer with a keen interest in artificial intelligence."
