--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "A junior engineer with a keen interest in artificial intelligence."
   location         : "China,Beijing"
   employer         : "Beihang University"
-  uri              : https://github.com/gouwei222
+  uri              : "https://github.com/gouwei222"
   email            : "573904359@qq.com" 
 
   # Academic websites
