--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Li Wei"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "https://github.com/gouwei222" # the subpath of your site, e.g. "/blog"
+url                      : https://github.com/gouwei222 # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
