--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Li Wei"
 description              : &description "personal description"
-url                      : https://gouwei222.github.io/liwei222.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://gouwei222.github.io/liwei222.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -28,7 +28,7 @@ author:
   bio              : "A junior engineer with a keen interest in artificial intelligence."
   location         : "China,Beijing"
   employer         : "Beihang University"
-  uri              : "https://github.com/gouwei222"
+  uri              : "https://gouwei222.github.io/liwei222.github.io"
   email            : "573904359@qq.com" 
 
   # Academic websites
